overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -172,4 +172,6 @@
 
 #info{
   background-color: white;
+  height: 100%;
+  overflow: auto;
 }
